<resources>
    <string name="app_name">QuestTime</string>
    <string name="questions_left">Questions left today</string>
    <string name="join_private_room">Join private room</string>
    <string name="join_public_room">Join public room</string>
    <string name="create_room">Create new room</string>
    <string name="room_name_hint">room name</string>
    <string name="difficulty">Difficulty:</string>
    <string name="type">Type:</string>
    <string name="private_string">Private</string>
    <string name="public_string">Public</string>
    <string name="select_categories">Select up to three categories:</string>
    <string name="q">Q</string>
    <string name="email_hint">email</string>
    <string name="send_password_reset">Send password reset e-mail</string>
    <string name="password_hint">password</string>
    <string name="login">Login</string>
    <string name="create_account">Create an account</string>
    <string name="forgot_passowrd">Forgot?</string>
    <string name="username_hint">username</string>
    <string name="repeat_password_hint">repeat password</string>
    <string name="register">Register</string>
    <string name="room_name">Room name</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="date">19. Mar 2018. 20:13</string>
    <string name="question">Question to answer</string>
    <string name="search">Search</string>
    <string name="leave_room">Leave this room?</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="no_rooms_yet">You are not part of any rooms yet. Press + to join or create a room.</string>
    <string name="no_questions_yet">There are no questions yet. The question will appear at a random time of day.</string>
    <string name="no_filter">No rooms match your filter.</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="no_categories_selected">No categories selected</string>
    <string name="no_connection">You are not connected to the Internet</string>
    <string name="oops">Oops!</string>
</resources>
