<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/popup_background"
    android:layout_gravity="center"
    >

    <TextView
        android:id="@+id/leaveTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_room"
        android:gravity="center"
        android:fontFamily="@font/roboto_black"
        android:textStyle="bold"

        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"

        />

    <Button
        android:id="@+id/leaveBtn"
        android:layout_below="@id/leaveTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leave"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_black"
        android:padding="8dp"
        android:layout_marginStart="100dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/stayBtn"
        android:layout_below="@id/leaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stay"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_black"
        android:padding="8dp"
        android:layout_marginStart="100dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>