<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="5"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/q"
            android:textColor="@android:color/white"
            android:textSize="130sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_black"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/separator_background"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        >

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        >


        <EditText
            android:id="@+id/passwordResetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:background="@drawable/edittext_background"
            android:padding="5dp"
            android:fontFamily="@font/roboto_black"
            />



        <Button
            android:id="@+id/sendEmailBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:text="@string/send_password_reset"
            android:layout_gravity="center"
            android:textSize="12pt"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto_black"
            />

    </LinearLayout>



</LinearLayout>